
[metadata]
name = iceutils
version = 0.0.1
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
scripts =
    bin/ice_animate_stack.py
    bin/ice_stack_invert.py
    bin/ice_crop_stack.py
    bin/ice_interactive_trace.py
    bin/ice_resample.py
    bin/ice_raster_view.py
    bin/ice_render_kml.py
    bin/ice_view_stack_mean.py
    bin/ice_explore_stack.py
    bin/ice_info.py

# end of file
